more writing articles

--- a/doc/6.md
+++ b/doc/6.md
@@ -11,7 +11,7 @@ Before the `sudo` command (which you have doubtless seen at least once) can be i
 
 At this point of the root user discussion, most people ask "so what am I supposed to do if I NEED root permissions?", and this is a very valid question. You need to have root permissions to update or install programs, and to make modifications to any user accounts, along with MANY other operations that you can encounter daily. The answer is to tell the root user to perform these actions on your behalf.
 
-Enter the `sudo` command, which is short for 'superuser do' (as a side note, sudo is pronounced 'soo-doo', not like the work 'pseudo', but I digress...). Typically when a command you type results in an error that includes "Permission Denied", `sudo` can get around the error and execute the command successfully. The syntax for using `sudo` is: `sudo [command]`, where `[command]` can be any command you want - even one that doesn't require root permissions. For example, if you don't have the permissions to delete a file, `sudo rm /file/name/here` will successfully delete it. Just keep the following in mind: if an action requires root permissions, there is a reason why regular users aren't allowed to do it by default.
+Enter the `sudo` command, which is short for 'superuser do' (as a side note, sudo is pronounced 'soo-doo', not like the word 'pseudo', but I digress...). Typically when a command you type results in an error that includes "Permission Denied", `sudo` can get around the error and execute the command successfully. The syntax for using `sudo` is: `sudo [command]`, where `[command]` can be any command you want - even one that doesn't require root permissions. For example, if you don't have the permissions to delete a file, `sudo rm /file/name/here` will successfully delete it. Just keep the following in mind: if an action requires root permissions, there is a reason why regular users aren't allowed to do it by default.
 
 In order for a `sudo` command to work, you will have to enter a 'sudoer password' before the command will correctly execute. A sudoer password is typically the user account password for any administrator account on the machine, although this may vary a bit. To save the user a bit of time, the system will only require you to enter a sudoer password once every 5 minutes. This is why multiple `sudo` commands in quick succession usually only require a password the first time.
 
