--- a/doc/7.md
+++ b/doc/7.md
@@ -37,7 +37,37 @@ Since mounted volumes preserve their file structure when mounted in Linux, copyi
 
 #### `dd` and `ddrescue`
 
-`dd` is a utility that will make a bitwise copy (i.e., it copies every single bit exactly as it is in the source - normally, the file gets slightly altered in various ways to make it compatible with the target directory) of a file or multiple files. As such, `dd` is useful for copying files that otherwise cannot be accessed, whether they are corrupt or otherwise non-functional (usually). We recommend that you stay away from `dd`, but know that it is a utility available to technicians with a fair amount of Linux experience (see Travis, Joe R., or Nicholai), and can be rather useful.
+`dd` is a utility that will make a bitwise copy (i.e., it copies every single bit exactly as it is in the source - normally, the file gets slightly altered in various ways to make it compatible with the target directory) of a file or multiple files. As such, `dd` is useful for copying files that otherwise cannot be accessed, whether they are corrupt or otherwise non-functional (usually). We recommend that you stay away from `dd`, but know that it is a utility available to technicians with a fair amount of Linux experience (see Travis, Joe R., or Nicholai), and can be rather useful. Another common use for `dd` is to create bootable USB drives from a disk image (such as an `.ISO` or `.img` file). This can be done by simply specifying the source as the disk image and the destination as the (empty) USB drive. Often, users will specify the block size of the copying operation (it will say something like `bs=1m`), but that goes beyond the scope of this guide.
+
+For reference, this is an example of correct `dd` usage:
+
+`dd if=/path/to/source of=/path/to/destination bs=1m`
 
 `ddrescue` is a utility that adds additional functionality to `dd`s feature set, further optimized to copy files from a damaged filesystem. In the case of disk read errors, `ddrescue` will 'try hard' (as stated by the documentation) to push past these errors. Again, it's not a bad idea to read through the documentation yourself, but ask a lead tech or supervisor before using this. It has the ability to screw things up if used incorrectly.
 
+
+## File System Architectures
+
+All volumes (hard drive partitions, USB flash drives, CDs/DVDs, network volumes, etc...) conform to a specific file structure. The file structure dictates how the files on the volume are physically laid out. It specifies how the computer indexes the locations of files on the hard drive. It also defines some other values, such as the maximum file size and how the drive platters are divided up into sectors, among other properties. All major operating systems behave differently in response to different file structures, so it is imperative that software technicians understand which file structures should be used and when, particularly when you are using a computer with one operating system to diagnose problems on a computer that runs a different operating system. We'll go over the basics of a few of the most common file structures:
+
+#### FAT / FAT32
+
+FAT stands for "File Allocation Table", which reflects how volumes of this file type assign file names to different areas on the hard drive. FAT volumes have a portion on the hard drive - eponymously named the "file allocation table" - that functions somewhat like a table of contents of the files that are stored on the volume, in that it maps a location on the drive to a human-readable file name. FAT is generally understood to be one of the simplest and oldest file systems still in common usage, and as a result, is recognized by virtually all major operating systems. For this reason, FAT is the recommended file structure for USB flash drives, since they are often passed around among multiple computers. 
+
+You will often see the file type FAT32 instead of just FAT. The '32' indicates the number of bits in a table elements. You don't need to know what this means, specifically, but it results in a couple notable limitations. On a FAT32 volume, the maximum volume size is 2TiB, and any single file can only be a maximum of 4GB. If you need to transfer a file that is more than 2TiB in size, you will have to use something other than a FAT32-formatted USB drive to do the task. 
+
+#### NTFS
+
+NTFS stands for "New Technology File System", and is the standard file system type for all modern versions of Windows. NTFS is the successor to FAT32, and it improves on many of the technical limitations of FAT32. For all standard purposes, you don't have to worry about a maximum volume size or a maximum file size. Due to the more robust features of NTFS, it has a more complex overhead, and isn't fully compatible with most other operating systems as a result. 
+
+Distributions of Linux generally have the ability to read NTFS without any additional software installed, but they can't write to NTFS unless you install third party software that allows you to do so. OS X can neither read from nor write to NTFS. Since it won't mount NTFS drives, the only indication you have that an NTFS volume is attached is by running Disk Utility - from the command line, you can list attached volumes (mounted or otherwise) by running the command `diskutil list`.
+
+#### HFS+
+
+HFS+ - the extended version of the file system HFS (Hierarchical File System) - is the standard for drives running OS X. You will often see HFS+ partitions listed as being "journaled" or "non-journaled". Journaling is a process that keeps simple changelogs for the file system in order to allow quicker recovery from crashes or power failures, and prevents volumes from becoming corrupted in those situations. Journaling is important to us because it can cause problems when you try to make modifications to a journaled volume from an external OS (such as when you try to recover/move files from a damaged HFS+ hard drive on another Mac or on a computer running Linux). If you do encounter problems working with the files, you can disable journaling by mounting the volume on a working instance of OS X and running the command `diskutil disableJournal /Volumes/volume_name_here`.
+
+Journaling problems aside, Linux does have the ability to read from and write to HFS+ volumes, although it's not standard practice to actually put a Linux file system on an HFS+ formatted volume. Windows does not typically interact well with HFS+, but Apple's Boot Camp drivers for Windows do allow read-only access to HFS+ volumes.
+
+#### Common Linux File Systems
+
+The Linux kernel is compatible with many different file systems. Since we don't have to often diagnose issues on Linux computers, we won't go into full details here - literature is available online if you'd like to learn more about them. The most common types that you will see are EXT2, EXT3, and EXT4 (EXT is short for 'EXTended file system'), and although the differences are minimal, I usually use EXT4 for new Linux volumes, as it is the newest of the three. You might also come across XFS file systems, JFS, and (less-so) ReiserFS, among others.
