--- a/doc/8.md
+++ b/doc/8.md
@@ -1,1 +1,17 @@
 # Diagnosing hardware issues
+
+Many experienced techs find that it is easier to diagnose problems if you are fluent at using the command line, as opposed to solely running GUI utilities. Since we are not hardware technicians, and we don't have much in the way of specialty equipment for hardware diagnosis, diagnosing hardware from the command line will basically be limited to hard drive failures. 
+
+#### `fsck`
+
+`fsck` - or "File System ChecK" - is one of the best tools for diagnosing issues with a hard drive. In general, it can be run using the syntax `fsck /dev/disk_name`. Note that `disk_name` refers to the name of the volume, and not the name of its mount point. For example, if you have a drive named `sdb2`, and you want to perform a simple check on it, you can run the command `fsck /dev/sdb2`. 
+
+It is worthwhile to look through the `man` page for `fsck`. There aren't many command flags, but I most commonly run it with the command flags `f` and `y` (e.g., `fsck -fy /dev/sdb2`), which tell the utility to try and clean the hard drive when errors are encountered, and to automatically do so each time an error is encountered without prompting the user individually, respectively. If you don't specify a volume when you run `fsck`, it will typically default to the current volume. This is why, when you boot a Mac into Single User Mode, you are prompted to run the command `fsck -fy` prior to specifying a mount point.
+
+We won't go into the different status messages that `fsck` returns when errors are found, but output is pretty detailed and easy to understand. Generally, whenever an error is returned, it's a good idea to look into the error further. Usually `fsck` errors are indicative of one of two things: 1.) the hard drive itself is physically damaged and/or dying, or 2.) the file system has been damaged or is corrupt.
+
+#### Other points to note
+
+As mentioned before, Linux is more permissive when working with damaged hard drives. Therefore, if you are experiencing a dying hard drive, and command utilities for diagnosis and repair fail on an OS X terminal, you may want to try performing equivalent operations on a Linux operating system. Of course, this can be done by plugging the drive itself into a computer running Linux, but in many cases it is easier to just use a portable Linux distribution such as System Rescue CD. System Rescue CD is a small Linux distribution that is packed full of various utilities for both software and hardware diagnosis, including almost all of the Linux commands that are mentioned in this tutorial.
+
+If you are not sure whether a hard drive is dying or not, and you are able to access a command line, keep an eye out for "I/O errors". If you see this while navigating directories on the problematic hard drive, this almost always means that the drive is permanently dying. `bash` and other standard Unix shells are remarkably proficient at letting you know if soemthing is behaving unexpectedly, and the best piece of advice you can follow is to simply use the command line as often as possible.
