More conversion to MD in tutorial files

--- a/doc/03.md
+++ b/doc/03.md
@@ -1,63 +1,53 @@
-=================================================================
-= 3. Shell commands, syntax, command flags, and passing arguments
-=================================================================
+# 3. Shell commands, syntax, command flags, and passing arguments
 
 There are numerous ways to get a command line interface in Linux. The most commonly used Linux command line is an application named "Bash". Bash is a type of Unix shell. A shell is just a program that gives you a command line that can interact with the operating system. Depending on the distribution of Linux you are using (and whether you specify to start the computer in command line only mode or if you start it in a graphical desktop mode), you may run Bash from within yet ANOTHER program. In Ubuntu (and also in OS X), this application is called Terminal. 
 
 A command line shell is, at its most basic level, a program that asks for a command, reads the command that the user types, runs the command, prints any output, and repeats all of the steps over again indefinitely. Since command lines interact with an operating system at a very low level, they tend to be very picky about what you type. Often, commands are case-sensitive, and typos almost always yield either an error or unintended results.
 
+- - -
 
-+----------------+
-| Shell Commands |
-+----------------+
+## Shell Commands
 
 By now, you have already seen what a Bash prompt looks like, but here it is again, in its most basic form:
 
-user@computername /current/dirrectory/here $ [type your command here]
+`user@computername /current/dirrectory/here $ [type your command here]`
 
-You type your command after the "$". The other information prior to the "$" may vary based on the distribution being used. Through the rest of this guide, 
+You type your command after the `$`. The other information prior to the `$` may vary based on the distribution being used. Through the rest of this guide, the `$` will be omitted for brevity.
 
-
-+--------+
-| Syntax |
-+--------+
+## Syntax
 
 A bash command most commonly consists of a specific program name followed by one or more options/parameters (which are called "arguments"). Here's the breakdown of a basic bash command:
 
-jdromano@CDC_imac /home/jdromano $ tar -zxvpf ncbi-blast-2.2.23-x64-linux.tar.gz
+`jdromano@CDC_imac /home/jdromano $ tar -zxvpf ncbi-blast-2.2.23-x64-linux.tar.gz`
 
-We already know that the portion before the "tar" is just the bash prompt. But what about everything after that?
+We already know that the portion before the `tar` is just the bash prompt. But what about everything after that?
 
-"tar" - This is the name of the program we are using. The TAR program is used to unzip compressed files - typically compressed files with a file extension of ".tar.gz". You will see this extension frequently when downloading and installing Linux programs, so the TAR program is very common in daily usage.
+`tar` - This is the name of the program we are using. The TAR program is used to unzip compressed files - typically compressed files with a file extension of `.tar.gz`. You will see this extension frequently when downloading and installing Linux programs, so the TAR program is very common in daily usage.
 
-"-zxvpf" - This is the first argument passed to the TAR program. It is a list of "command flags", which we will discuss shortly.
+`-zxvpf` - This is the first argument passed to the TAR program. It is a list of "command flags", which we will discuss shortly.
 
-"ncbi-blast-2.2.23-x64-linux.tar.gz" - Don't be intimidated by this long jumble of letters, numbers, and punctuation! It's simply the name of the file you are unzipping using the TAR program - notice the ".tar.gz" extension, like I mentioned. It is the second argument you are passing to the TAR program in the command.
+`ncbi-blast-2.2.23-x64-linux.tar.gz` - Don't be intimidated by this long jumble of letters, numbers, and punctuation! It's simply the name of the file you are unzipping using the TAR program - notice the `.tar.gz` extension, like I mentioned. It is the second argument you are passing to the TAR program in the command.
 
-While this sample command example has two arguments passed to it, the command will execute fine by just passing it "tar ncbi-blast-2.2.23-x64-linux.tar.gz", without the command flags. The minimum number of arguments in a given command depends upon which program you are running.
-
-
-+---------------+
-| Command Flags |
-+---------------+
-
-In the example we looked at, I mentioned that "-zxvpf" are the command flags passed to the TAR program. Although they could have been left off without the command giving us any errors, they tell the TAR program exactly how we want it to unzip the .tar.gz file. It's a good idea to know what each of the letters is telling the program:
-
--z - Uses "gzip/gunzip". This is important if you want it to extract correctly when the extension includes ".gz".
-
--x - Extract. The TAR program can both compress and extract programs to/from .tar archives. The "x" says you want to extract, not compress.
-
--v - Verbose. Verbose is a common option on command line applications, that instructs the program to state every operation it performs. If we leave this off, the program will still unzip the file, but it won't tell us it did so successfully. It will simply print a single blank line as output.
-
--p - Preserve permissions. With this option, the permissions for the extracted file are the same as they were for the user who originally zipped the file into an archive.
-
--f - Allows you to specify the archive file. We don't really need to explain this - just make sure to use it when you run TAR.
-
-There is no inherent significance in my picking the above command flags for this example. I'm just trying to show a good example of effectively using command flags, and giving you a taste for what type of options they commonly specify. Command flags are NOT the same from program to program. I.e., the "-p" flag means "preserve permissions" for the TAR program, but it may have an entirely different function when you call a different program.
-
-Sometimes, command flags have both long and short forms. The ones we've talked about thus far are short command flags. Short command flags are one letter in length, and are preceded by a single "-". Multiple short command flags can be listed after a single dash (like the "-zxvpf" in our example). Long forms usually take the form of an entire word or phrase preceded by two dashes ("--"). For example, "-h" brings up help dialog for many programs, but the same can be accomplished by using the "--help" command flag as an argument instead. These long command flags cannot be combined like their short forms, and should be listed sequentially and separated by spaces.
+While this sample command example has two arguments passed to it, the command will execute fine by just passing it `tar ncbi-blast-2.2.23-x64-linux.tar.gz`, without the command flags. The minimum number of arguments in a given command depends upon which program you are running.
 
 
-+-----------+
-| Questions |
-+-----------+
+## Command Flags
+
+In the example we looked at, I mentioned that `-zxvpf` are the command flags passed to the TAR program. Although they could have been left off without the command giving us any errors, they tell the TAR program exactly how we want it to unzip the .tar.gz file. It's a good idea to know what each of the letters is telling the program:
+
+`-z` - Uses "gzip/gunzip". This is important if you want it to extract correctly when the extension includes ".gz".
+
+`-x` - Extract. The TAR program can both compress and extract programs to/from .tar archives. The "x" says you want to extract, not compress.
+
+`-v` - Verbose. Verbose is a common option on command line applications, that instructs the program to state every operation it performs. If we leave this off, the program will still unzip the file, but it won't tell us it did so successfully. It will simply print a single blank line as output.
+
+`-p` - Preserve permissions. With this option, the permissions for the extracted file are the same as they were for the user who originally zipped the file into an archive.
+
+`-f` - Allows you to specify the archive file. We don't really need to explain this - just make sure to use it when you run TAR.
+
+There is no inherent significance in my picking the above command flags for this example. I'm just trying to show a good example of effectively using command flags, and giving you a taste for what type of options they commonly specify. Command flags are NOT the same from program to program. I.e., the `-p` flag means "preserve permissions" for the TAR program, but it may have an entirely different function when you call a different program.
+
+Sometimes, command flags have both long and short forms. The ones we've talked about thus far are short command flags. Short command flags are one letter in length, and are preceded by a single `-`. Multiple short command flags can be listed after a single dash (like the `-zxvpf` in our example). Long forms usually take the form of an entire word or phrase preceded by two dashes (`--`). For example, `-h` brings up help dialog for many programs, but the same can be accomplished by using the `--help` command flag as an argument instead. These long command flags cannot be combined like their short forms, and should be listed sequentially and separated by spaces.
+
+
+## Questions
