--- a/doc/04.md
+++ b/doc/04.md
@@ -1,16 +1,12 @@
-=====================================================
-= Navigating the file structure from the command line
-=====================================================
+# Navigating the file structure from the command line
 
 In order to effectively use a Linux system from the command line, every user must know how to navigate the system's file structure. This is accomplished by a small set of commands that you should quickly get into muscle memory:
 
-ls - Lists the contents of the current directory. Both files and sub-directories are listed. By default, the files and sub-directories are presented in a grid layout with no further information than their name. However, ls is commonly used with the "-l" flag, which presents the directory contents as a vertical list, along with useful information for each item, such as access permissions, file owner, and date/time of most recent modification. You can also use the "-a" flag to display any hidden files/folders. You can also list a directory as an argument, in which case ls will show you the contents of the specified directory instead of the directory you are currently working from.
+`ls` - Lists the contents of the current directory. Both files and sub-directories are listed. By default, the files and sub-directories are presented in a grid layout with no further information than their name. However, ls is commonly used with the `-l` flag, which presents the directory contents as a vertical list, along with useful information for each item, such as access permissions, file owner, and date/time of most recent modification. You can also use the `-a` flag to display any hidden files/folders. You can also list a directory as an argument, in which case ls will show you the contents of the specified directory instead of the directory you are currently working from.
 
-cd - Changes the current directory. You can either specify the full path of the directory you are trying to navigate to, or you can simply use the 'relative' path. The relative path is the path to the target directory as if your current directory is the root directory. In other words, let's pretend that we are currently working from "/home/jdromano", and that we want to navigate to "/home/jdromano/Dropbox". Instead of having to write "cd /home/jdromano/Dropbox", we only need to say "cd Dropbox" for the same result. This can save a lot of time and keystrokes, particularly when the full path of your current directory is very long. Using relative paths, we can also easily navigate UP one level in the directory structure. If we are at "/home/jdromano/Dropbox/UVM" and we want to change it to "/home/jdromano/Dropbox", we only need to say "cd ../". The "../" is shorthand for navigating up one level.
+`cd` - Changes the current directory. You can either specify the full path of the directory you are trying to navigate to, or you can simply use the 'relative' path. The relative path is the path to the target directory as if your current directory is the root directory. In other words, let's pretend that we are currently working from `/home/jdromano`, and that we want to navigate to `/home/jdromano/Dropbox`. Instead of having to write `cd /home/jdromano/Dropbox`, we only need to say `cd Dropbox` for the same result. This can save a lot of time and keystrokes, particularly when the full path of your current directory is very long. Using relative paths, we can also easily navigate UP one level in the directory structure. If we are at `/home/jdromano/Dropbox/UVM` and we want to change it to `/home/jdromano/Dropbox`, we only need to say `cd ../`. The `../` is shorthand for navigating up one level.
 
-pwd - Prints the path of the current working directory. Often, you need to remind yourself the full path of the directory you are currently at. Bash, by default, only lists the name of the current directory at the prompt, but NOT the full path.
+`pwd` - Prints the path of the current working directory. Often, you need to remind yourself the full path of the directory you are currently at. `bash`, by default, only lists the name of the current directory at the prompt, but NOT the full path.
 
 
-+-----------+
-| Questions |
-+-----------+
+## Questions
